--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 </div>
                             </div> -->
                             
-                                <div class="message-container" v-for="(msg, indexMessage) in contacts[curContactIndex].messages" :class="msg.status">
+                                <div class="message-container" v-for="(msg, indexMessage) in contacts[curContactIndex].messages" :key="msg.date" :class="msg.status">
                                     <div class="message">
                                         <div>{{ msg.message }}</div>
                                         <p>{{ msg.date }}</p>
@@ -226,8 +226,9 @@
                     <footer class="footer">
                         <div class="right form disappear-540">
                             <div class="icon-container disappear-320"> <i class="fa-regular fa-face-smile"></i> </div>
-                            <input type="text" v-model="newMessage.message" @keyup.enter="sendMessage"/>
-                            <div class="icon-container disappear-320 audio-message"> <i class="fa-solid fa-microphone"></i> </div>
+                            <input type="text" v-model="newMessage.message" :key="newMessage.date" @keyup.enter="sendMessage(curContactIndex)"/>
+                            <!-- <div class="icon-container disappear-320 audio-message"> <i class="fa-solid fa-microphone"></i> </div> -->
+                            <label for="key" @click="sendMessage(curContactIndex)" class="icon-container disappear-320"> <i class="fa-solid fa-paper-plane"></i> </label>
                         </div>
                     </footer>
                         
