style: swapped sent and received messages

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <main class="right main">
                         <!-- CHAT -->
                         <div class="chat">
-                            <!-- <div class="message-container received">
+                            <!-- <div class="message-container sent">
                                 <div class="message">
                                     <div class="message-body">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt quidem soluta totam ab, non quod doloribus odio cumque perferendis repudiandae voluptatem quas quo, dolore iusto esse, similique nulla omnis. Temporibus?</p>
