--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                                 <div class="message-options">
                                                     <div class="hover-box">
                                                         <button>Options</button>
-                                                        <button @click="deleteMessage(curContactIndex, indexMessage)">Delete</button>
+                                                        <button @click="deleteMessage(curContactIndex, indexMessage, msg.status)">Delete</button>
                                                     </div>
                                                     <p><i class="fa-solid fa-angle-down"></i></p>
                                                 </div>
