--- a/index.html
+++ b/index.html
@@ -219,16 +219,18 @@
                             
                                 <div class="message-container" v-for="(msg, indexMessage) in contacts[curContactIndex].messages" :key="msg.date" :class="msg.status">
                                     <div class="message">
-                                        <div class="message-body">
-                                            <div>{{ msg.message }}</div>
-                                            <p>{{ msg.date }}</p>
-                                            <div class="message-more">
+                                        <div class="message-body d-flex">
+                                            <div class="message-text">
+                                                <div>{{ msg.message }}</div>
+                                                <p>{{ msg.date }}</p>
+                                            </div>
+                                            <div class="message-more position-relative">
                                                 <div class="message-options">
                                                     <div class="hover-box">
                                                         <button>Options</button>
                                                         <button @click="deleteMessage(curContactIndex, indexMessage, msg.status)">Delete</button>
                                                     </div>
-                                                    <p><i class="fa-solid fa-angle-down"></i></p>
+                                                    <i class="fa-solid fa-angle-down"></i>
                                                 </div>
                                             </div>
                                         </div>
