style: removed contact preview on smaller screens

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <!-- CONTACT -->
                             <div class="contact" v-for="(contact, index) in contacts" v-show="contact.visible" :key="contact.name"  @click="setActivePlayer(index)">
                                 <div class="img-container">  <img :src="getAvatar(index)" alt=""> </div>
-                                <div class="first-line">
+                                <div class="first-line disappear-540">
                                     <h5>{{contact.name}} <span class="position-relative top-0 start-50">{{getLastMessage(index).date}}</span> </h5>
                                     <p>{{getLastMessage(index).message}}</p>
                                 </div>
